--- a/MazeWpfApp/App.xaml
+++ b/MazeWpfApp/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="MazeWpfApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MazeWpfApp"
-             StartupUri="MainWindow.xaml">
+             StartupUri="GameBoard.xaml">
     <Application.Resources>
          
     </Application.Resources>
