--- a/MazeWpfApp/Views/MazeView.xaml
+++ b/MazeWpfApp/Views/MazeView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MazeWpfApp.Views.GameBoardView"
+﻿<UserControl x:Class="MazeWpfApp.Views.MazeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,5 +6,4 @@
              mc:Ignorable="d" 
              d:DesignHeight="{Binding Height}" 
              d:DesignWidth="{Binding Width}"
-             Content="{Binding Content}">
-</UserControl>
+             Content="{Binding Content}"/>
